Fixed spacing between bars in BarChart and added possibility for multiple labels per Y axis.

--- a/webroot/common/ui/css/contrail.chart.css
+++ b/webroot/common/ui/css/contrail.chart.css
@@ -535,7 +535,7 @@ input.ace-input[type=radio] + .ace-lbl.inactive::before {
 
 .bar-chart .bar {
     fill-opacity: .75;
-    shape-rendering: crispEdges;
+    /*shape-rendering: crispEdges;*/
 }
 
 .bar-chart .bar.active {
